.dropdown display: inline-block causing alignment issues in other components

--- a/src/scss/lr7-_styled-theme/_dropdowns.scss
+++ b/src/scss/lr7-_styled-theme/_dropdowns.scss
@@ -20,10 +20,6 @@
 	padding: 0;
 }
 
-.dropdown {
-	display: inline-block;
-}
-
 .dropdown-menu {
 	.inline-scroller, .link-list {
 		li a {
